--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+src/environments/firebase.environment.ts
+
 # compiled output
 /dist
 /tmp
